--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "['thing', 'always', 'wanted', 'whooo', 'wait', 'nothing']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        " (['synopsis', ':', 'a', 'mentally', 'unstable', 'man', ...], 'neg')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,20 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(['house', 'on', 'haunted', 'hill', '(', '1999', ')', ...], 'neg'),\n",
-       " (['here', \"'\", 's', 'a', 'concept', '--', 'jean', '-', ...], 'neg'),\n",
-       " (['dr', '.', 'alan', 'grant', '(', 'sam', 'neill', ',', ...], 'neg'),\n",
-       " (['old', 'soldiers', 'never', 'die', ',', 'they', ...], 'neg'),\n",
-       " (['this', 'movie', 'is', 'written', 'by', 'the', 'man', ...], 'neg')]"
+       "[(['despite', 'its', 'exceedingly', 'well', '-', 'done', ...], 'neg'),\n",
+       " (['well', 'if', 'you', 'are', 'up', 'for', 'stellar', ...], 'neg'),\n",
+       " (['by', 'the', 'time', 'dennis', 'quaid', ',', 'the', ...], 'neg'),\n",
+       " (['the', 'last', 'steve', 'martin', 'film', 'i', 'saw', ...], 'pos'),\n",
+       " (['it', \"'\", 's', 'tough', 'to', 'really', 'say', ...], 'pos')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,16 +418,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.746"
+       "0.818"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -448,26 +448,154 @@
      "output_type": "stream",
      "text": [
       "Most Informative Features\n",
-      "             magnificent = True              pos : neg    =     11.2 : 1.0\n",
-      "                    anna = True              pos : neg    =     10.6 : 1.0\n",
+      "                  seagal = True              neg : pos    =     10.9 : 1.0\n",
+      "                 freddie = True              neg : pos    =     10.9 : 1.0\n",
+      "             outstanding = True              pos : neg    =     10.7 : 1.0\n",
+      "                  sloppy = True              neg : pos    =     10.5 : 1.0\n",
+      "                  prinze = True              neg : pos    =     10.2 : 1.0\n",
       "              schumacher = True              neg : pos    =      9.5 : 1.0\n",
-      "                    zeta = True              neg : pos    =      9.5 : 1.0\n",
-      "            breathtaking = True              pos : neg    =      8.6 : 1.0\n",
-      "             outstanding = True              pos : neg    =      8.1 : 1.0\n",
-      "                religion = True              pos : neg    =      8.0 : 1.0\n",
-      "               ludicrous = True              neg : pos    =      7.7 : 1.0\n",
-      "                   anger = True              pos : neg    =      7.4 : 1.0\n",
-      "             wonderfully = True              pos : neg    =      7.3 : 1.0\n",
-      "                  seagal = True              neg : pos    =      7.2 : 1.0\n",
-      "                  random = True              neg : pos    =      7.1 : 1.0\n",
-      "                 balance = True              pos : neg    =      7.0 : 1.0\n",
-      "                 idiotic = True              neg : pos    =      6.9 : 1.0\n",
-      "                   jolie = True              neg : pos    =      6.9 : 1.0\n"
+      "                   inept = True              neg : pos    =      9.2 : 1.0\n",
+      "                   mulan = True              pos : neg    =      9.1 : 1.0\n",
+      "             wonderfully = True              pos : neg    =      8.6 : 1.0\n",
+      "                   ideal = True              pos : neg    =      7.8 : 1.0\n",
+      "            respectively = True              pos : neg    =      7.4 : 1.0\n",
+      "                   anger = True              pos : neg    =      6.2 : 1.0\n",
+      "                 idiotic = True              neg : pos    =      6.0 : 1.0\n",
+      "                     sat = True              neg : pos    =      5.8 : 1.0\n",
+      "                   fiona = True              pos : neg    =      5.7 : 1.0\n"
      ]
     }
    ],
    "source": [
     "classifier.show_most_informative_features(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using SkLearn's Classifiers within NLTK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from nltk.classify.scikitlearn import SklearnClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SklearnClassifier(SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False))>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svc = SVC()\n",
+    "classifier_sklearn = SklearnClassifier(svc)\n",
+    "classifier_sklearn.train(training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.786"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.classify.accuracy(classifier_sklearn, testing_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\MrLather\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SklearnClassifier(RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False))>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc = RandomForestClassifier()\n",
+    "classifier_sklearn1 = SklearnClassifier(rfc)\n",
+    "classifier_sklearn1.train(training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.694"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.classify.accuracy(classifier_sklearn1, testing_data)"
    ]
   }
  ],
@@ -476,18 +604,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
   }
  },
  "nbformat": 4,
